# GraphicsEngine

./: .gitignore  CMakeLists.txt
shaders/: triangle.frag  triangle.vert
src/: Main.cpp  Shader.cpp  Shader.h
src/common/: Color.h  Renderer.h  Time.h
src/platform/gl/: OpenGLRenderer.cpp  OpenGLRenderer.h  Time.cpp
src/platform/mac/: MacWindow.h  MacWindow.mm  MetalRenderer.h  MetalRenderer.mm  Time.mm
